// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={false}
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      Object {},
    ]
  }
>
  <Text
    accessible={false}
    color="blackColor"
    markdown={false}
    markdownStyle={Object {}}
    style={
      Object {
        "flex": 1,
      }
    }
    type="text"
  >
    Bananas
  </Text>
  <Switch
    accessibilityLabel="Bananas"
    disabled={false}
    onValueChange={[Function]}
    value={false}
  />
</Touchable>
`;

exports[`renders correctly when checked 1`] = `
<Touchable
  accessibilityComponentType="button"
  accessibilityTraits={
    Array [
      "button",
    ]
  }
  accessible={false}
  delayPressIn={50}
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      Object {},
    ]
  }
>
  <Text
    accessible={false}
    color="blackColor"
    markdown={false}
    markdownStyle={Object {}}
    style={
      Object {
        "flex": 1,
      }
    }
    type="text"
  >
    Bananas
  </Text>
  <Switch
    accessibilityLabel="Bananas"
    disabled={false}
    onValueChange={[Function]}
    value={true}
  />
</Touchable>
`;
